# fma_hiclass

./: Example-Hiclass.ipynb  Executer.ipynb  Metrics.ipynb  Train_Hiclass.ipynb  Train_Hiclass.py  Train_Hiclass_transfer.ipynb  Train_Hiclass_transfer.py  prep.py  pyproject.toml  requirements.txt  times.csv
dataset/: dataset.py  extract_music.py
dataset/.ipynb_checkpoints/: labels-checkpoint.py
utils/: data.py
